[package]
name = "strdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wapm]
namespace = "willdera"
abi = "none"
bindings = { wai-version = "0.1.0", exports = "strdiff.wai" }

[dependencies]
wasmer = "3.0"
wai-bindgen-rust = "0.2.3"
