[package]
name = "strdiff"
version = "0.1.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/WillDera/strdiff.git"
license = "MIT"
description = "Library for computing Levenshtein and Damerau-Levenshtein distances of strings and list of strings"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wai-bindgen-rust = "0.2.3"

[dev-dependencies]
clippy = "0.0.302"

[package.metadata.wapm]
namespace = "willdera"
abi = "none"
bindings = { wai-version = "0.1.0", exports = "strdiff.wai" }
